refactor: product service, getting one product